--- a/ReQuantum/ReQuantum.csproj
+++ b/ReQuantum/ReQuantum.csproj
@@ -67,4 +67,8 @@
       <LastGenOutput>UIText.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Modules\Zdbk\Examples\" />
+  </ItemGroup>
 </Project>
